fix z-index of filter tooltip over favstars

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,7 +60,7 @@ $tooltipPadding: 8px;
   border-radius: 4px;
   box-shadow: 0 0 1px 1px black;
   padding: $tooltipPadding;
-  z-index: 10;
+  z-index: 20;
 }
 
 @mixin button {
